--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
 .heading
 {
-    width: 100%;
-    text-align: left;
+width: 100%;
+text-align: left;
 }
-
-.heading h3
-{
+.heading h3{
     display: inline;
 }
 
-.heading button
-{
+.heading button{
     float: right;
     border: 1px solid white;
 }
 
-.big_image
+#start ,#status, #restart
 {
-    width: 100%;
+font-size: 22px;
 }
 
-#start , #status
+.modal-dialog
 {
-    font-size: 22px;
+    width: 70%;
 }
-
-canvas
+.modal-body
 {
-    border: 2px solid white;
-    border-radius: 10px;
-    margin-top: 130px;
-    box-shadow: 5px 5px 5px white;
+    text-align: left;
+    font-size: 20px;
+}
+canvas 
+{
+    border:3px solid white;
+    border-radius: 20px;
+    box-shadow:  5px 5px 5px white;
 }
